@@ -6,16 +6,24 @@
     <groupId>org.gitools</groupId>
     <artifactId>gitools</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.1</version>
+    <version>2.1.0</version>
+
     <name>gitools</name>
     <description>Gitools</description>
-    <url>https://bg.upf.edu/forge/projects/gitools</url>
+    <url>http://gitools.github.io/gitools</url>
 
     <organization>
         <name>Universitat Pompeu Fabra - Biomedical Genomics group</name>
         <url>http://bg.upf.edu</url>
     </organization>
 
+    <licenses>
+        <license>
+            <name>GNU General Public License (GPL) version 3.0</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <issueManagement>
         <system>Github</system>
@@ -29,22 +37,34 @@
     </scm>
 
     <modules>
-        <module>gitools-utils</module>
-        <module>gitools-core</module>
-        <module>gitools-cli</module>
-        <module>gitools-obo</module>
-        <module>gitools-biomart</module>
-        <module>gitools-intogen</module>
-        <module>gitools-kegg</module>
-        <module>gitools-ui-platform</module>
-        <module>gitools-ui-app</module>
+        <module>org.gitools.utils</module>
+        <module>org.gitools.datasources</module>
+        <module>org.gitools.cli</module>
+        <module>org.gitools.ui.platform</module>
+        <module>org.gitools.ui.app</module>
+        <module>org.gitools.api</module>
+        <module>org.gitools.analysis</module>
+        <module>org.gitools.persistence</module>
+        <module>org.gitools.matrix</module>
+        <module>org.gitools.resource</module>
+        <module>org.gitools.heatmap</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <license.licenseName>gpl_v3</license.licenseName>
         <license.inceptionYear>2013</license.inceptionYear>
+        <exclude.tests>org/gitools/analysis/**/*.java</exclude.tests>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>test-analysis</id>
+            <properties>
+                <exclude.tests></exclude.tests>
+            </properties>
+        </profile>
+    </profiles>
 
     <repositories>
 
@@ -63,60 +83,26 @@
     </repositories>
 
     <distributionManagement>
-        <snapshotRepository>
-            <id>gitools-snapshots</id>
-            <url>file:///${user.dir}/target/repo</url>
-            <uniqueVersion>false</uniqueVersion>
-        </snapshotRepository>
-        <repository>
-            <id>gitools-releases</id>
-            <url>file:///${user.dir}/target/repo</url>
-        </repository>
+        <site>
+            <id>site</id>
+            <name>Gitools ghpages checkout</name>
+            <url>file://${basedir}/site/${project.version}</url>
+        </site>
     </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
 
             <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-utils</artifactId>
-                <version>${project.version}</version>
+                <groupId>org.jboss.weld.se</groupId>
+                <artifactId>weld-se-core</artifactId>
+                <version>2.2.0.Alpha1</version>
             </dependency>
 
             <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-core</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-biomart</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-obo</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-kegg</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-intogen</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.gitools</groupId>
-                <artifactId>gitools-ui-platform</artifactId>
-                <version>${project.version}</version>
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>
+                <version>1.1</version>
             </dependency>
 
             <dependency>
@@ -133,9 +119,27 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>16.0.1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>commons-net</groupId>
                 <artifactId>commons-net</artifactId>
                 <version>3.0.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>3.2.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.sf.opencsv</groupId>
+                <artifactId>opencsv</artifactId>
+                <version>2.3</version>
             </dependency>
 
             <dependency>
@@ -184,7 +188,7 @@
             <dependency>
                 <groupId>nz.ac.waikato.cms.weka</groupId>
                 <artifactId>weka-stable</artifactId>
-                <version>3.6.8</version>
+                <version>3.6.10</version>
             </dependency>
 
             <dependency>
@@ -214,7 +218,7 @@
             <dependency>
                 <groupId>weblookandfeel</groupId>
                 <artifactId>weblookandfeel</artifactId>
-                <version>1.5.beta</version>
+                <version>1.28</version>
             </dependency>
 
             <dependency>
@@ -229,15 +233,58 @@
                 <version>2.1</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.jgoodies</groupId>
+                <artifactId>forms</artifactId>
+                <version>1.2.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.intellij</groupId>
+                <artifactId>forms_rt</artifactId>
+                <version>7.0.3</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.jgoodies</groupId>
+                <artifactId>binding</artifactId>
+                <version>2.0.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20090211</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.googlecode.vfsjfilechooser2</groupId>
+                <artifactId>vfsjfilechooser2</artifactId>
+                <version>0.2.5</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.jcraft</groupId>
+                <artifactId>jsch</artifactId>
+                <version>0.1.49</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.swinglabs</groupId>
+                <artifactId>swingx</artifactId>
+                <version>1.6.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.brsanthu</groupId>
+                <artifactId>google-analytics-java</artifactId>
+                <version>1.0.4</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>com.intellij</groupId>
-            <artifactId>annotations</artifactId>
-            <version>12.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -313,6 +360,145 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.kohsuke</groupId>
+                        <artifactId>doxia-module-markdown</artifactId>
+                        <version>1.0</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <reportPlugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>2.12.4</version>
+                            <configuration>
+                                <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-jxr-plugin</artifactId>
+                            <version>2.2</version>
+                            <configuration>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-pmd-plugin</artifactId>
+                            <version>3.0.1</version>
+                            <configuration>
+                                <linkXref>true</linkXref>
+                                <sourceEncoding>utf-8</sourceEncoding>
+                                <minimumTokens>100</minimumTokens>
+                                <targetJdk>1.6</targetJdk>
+                                <aggregate>true</aggregate>
+                            </configuration>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>findbugs-maven-plugin</artifactId>
+                            <version>2.3.1</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>cobertura-maven-plugin</artifactId>
+                            <version>2.5.2</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-checkstyle-plugin</artifactId>
+                            <version>2.6</version>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.codehaus.mojo</groupId>
+                            <artifactId>taglist-maven-plugin</artifactId>
+                            <version>2.4</version>
+                            <configuration>
+                                <tags>
+                                    <tag>TODO</tag>
+                                    <tag>FIXME</tag>
+                                </tags>
+                            </configuration>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-javadoc-plugin</artifactId>
+                            <version>2.7</version>
+                            <configuration>
+                                <minmemory>512m</minmemory>
+                                <maxmemory>1g</maxmemory>
+                                <linksource>true</linksource>
+                            </configuration>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>aggregate</report>
+                                        <report>test-aggregate</report>
+                                        <report>fix</report>
+                                        <report>test-fix</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-project-info-reports-plugin</artifactId>
+                            <version>2.3.1</version>
+                            <reportSets>
+                                <reportSet>
+                                    <reports>
+                                        <report>summary</report>
+                                        <report>license</report>
+                                    </reports>
+                                </reportSet>
+                            </reportSets>
+                        </plugin>
+
+                    </reportPlugins>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                <configuration>
+                    <excludes>
+                        <exclude>${exclude.tests}</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
         </plugins>
 
         <pluginManagement>
